# audiobench

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  README.md  TODO.md  build.py  build.rs  build_linux.sh  build_win.ps1  index.css  index.html  index.js  latest.json  rustfmt.toml  workspace.code-workspace
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yaml
base_library/modules/: amplitude_mod.module.ns  amplitude_mod.module.yaml  envelope.module.ns  envelope.module.yaml  fm_oscillator.module.yaml  harmonic.module.ns  harmonic.module.yaml  note_info.module.ns  note_info.module.yaml  note_input.module.ns  note_input.module.yaml  note_output.module.ns  note_output.module.yaml  oscillator.module.ns  oscillator.module.yaml  phase_mod.module.ns  phase_mod.module.yaml  sine_wave.module.ns  sine_wave.module.yaml  square_wave.module.ns  square_wave.module.yaml  triangle_wave.module.ns  triangle_wave.module.yaml
base_library/patches/: default.abpatch  square_bass.abpatch
book/: 404.html  additional_libraries.html  getting_started.html  index.html  print.html  searchindex.js  searchindex.json
book/making_libraries/: adding_patches.html  audiobench_and_julia.html  custom_modules.html  custom_modules_julia.html  custom_modules_yaml.html  factory_library_source.html  introduction_to_julia.html  module_controls.html  module_widgets.html  publishing.html  start.html
components/audiobench/: Cargo.toml  build.rs
components/audiobench-clib/: Cargo.toml  audiobench.h
components/audiobench/src/: config.rs  lib.rs  scui_config.rs  util.rs
components/audiobench/src/engine/: base.rs  codegen.rs  data_routing.rs  data_transfer.rs  julia_thread.rs  lib.ns  mod.rs  module.rs  parts.rs  perf_counter.rs  processing_thread.rs  program_wrapper.rs  static_controls.rs
components/audiobench/src/engine/controls/: base.rs  duration.rs  float_in_range.rs  frequency.rs  input.rs  int.rs  mod.rs  option_choice.rs  timing_mode.rs  trigger_sequence.rs  value_sequence.rs
components/audiobench/src/gui/: action.rs  base.rs  constants.rs  graphics.rs  mod.rs  mouse_behaviors.rs
components/audiobench/src/gui/graph/: graph.rs  mod.rs  module.rs  wires.rs
components/audiobench/src/gui/module_widgets/: duration_box.rs  envelope_graph.rs  frequency_box.rs  hslider.rs  input.rs  int_box.rs  knob.rs  mini_knob.rs  mod.rs  option_box.rs  option_icon_grid.rs  outline_stuff.rs  timing_selector.rs  traits.rs  trigger_sequence.rs  value_sequence.rs  waveform_graph.rs
components/audiobench/src/gui/top_level/: header.rs  library_info.rs  message_log.rs  mod.rs  module_browser.rs  note_graph.rs  patch_browser.rs
components/audiobench/src/gui/top_level/graph/: graph.rs  mod.rs  module.rs  output_view.rs  wires.rs
components/audiobench/src/gui/ui_widgets/: icon_button.rs  library_browser.rs  link_button.rs  menu_bar.rs  mod.rs  module_browser.rs  parts.rs  patch_browser.rs  tab_button.rs  text_box.rs  traits.rs
components/audiobench/src/registry/: base.rs  library_preload.rs  mini_bin.rs  module_template.rs  save_data.rs  update_check.rs  user_library_info.yaml  yaml.rs
components/audiobench_clib/: Cargo.toml  audiobench.h  build.rs
components/audiobench_clib/src/: lib.rs
components/benchmark/: Cargo.toml
components/factory_library/: lib.lib.jl  library_info.yaml
components/hui/: Cargo.toml
components/hui_macros/: Cargo.toml
components/installer_linux/: build.sh
components/juce_frontend/: CMakeLists.txt  remove_splash.py
components/juce_frontend/osx_stuff/: DS_Store_AU  DS_Store_Standalone  bg.xcf
components/juce_frontend/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp
components/julia_helper/: Cargo.toml
components/julia_helper/src/: lib.rs
components/nodespeak/: Cargo.toml
components/nodespeak/src/: lib.rs
components/nodespeak/src/ast/: grammar.pest  mod.rs
components/nodespeak/src/high_level/: compiler.rs  mod.rs  problem.rs
components/nodespeak/src/llvmir/: ingest.rs  mod.rs  structure.rs
components/nodespeak/src/llvmir/ingest/: base.rs  converters.rs  entry.rs  helpers.rs  mod.rs
components/nodespeak/src/llvmir/structure/: data.rs  mod.rs  program.rs
components/nodespeak/src/resolved/: mod.rs
components/nodespeak/src/resolved/ingest/: foundation.rs  helpers.rs  mod.rs  possibly_known_data.rs  problems.rs  statements.rs  util.rs  vcexpression.rs  vpexpression.rs
components/nodespeak/src/resolved/structure/: data_type.rs  expression.rs  known_data.rs  mod.rs  program.rs  scope.rs  variable.rs
components/nodespeak/src/shared/: mod.rs
components/nodespeak/src/trivial/: mod.rs
components/nodespeak/src/trivial/ingest/: mod.rs  problems.rs
components/nodespeak/src/trivial/structure/: instruction.rs  known_data.rs  mod.rs  program.rs  value.rs  variable.rs
components/nodespeak/src/util/: iters.rs  known_data.pest  mod.rs  nvec.rs  parse_native_data.rs
components/nodespeak/src/vague/ingest/: foundation.rs  mod.rs  problems.rs  statements.rs  vcexpression.rs  vpexpression.rs
components/nodespeak/src/vague/structure/: builtins.rs  data_type.rs  expression.rs  known_data.rs  mod.rs  program.rs  scope.rs  variable.rs
components/nodespeak/tests/: arithmetic.ns  tests.rs
components/nodespeak/tests/assert_ok/: index.ns  logic.ns
components/nodespeak/tests/compile_err/: bound0.ns  bound1.ns  bound2.ns  data_type_mismatch.ns  logic.ns
components/nodespeak/tests/compile_ok/: general_test.ns  grammar_stuff.ns  prop_access.ns
components/nodespeak_cli/: Cargo.toml
components/nodespeak_cli/src/: main.rs
components/scui/: Cargo.toml
components/scui/src/: lib.rs  misc.rs  mouse.rs  top_level.rs  vec.rs  widget.rs
components/shared_util/: Cargo.toml
components/shared_util/src/: lib.rs  mini_serde.rs  nvec.rs  perf_counter.rs  prelude.rs  search.rs  version.rs
components/yaml_widget_boilerplate/: Cargo.toml
components/yaml_widget_boilerplate/src/: lib.rs
factory_library/: library_info.yaml
modules/: note_input.yaml  oscillator.yaml
src/: audiobench.h  engine.rs  graphics.rs  lib.rs  util.rs  widgets.rs
(+252 files in other folders)
