[package]
name = "audiobench"
version = "0.1.0"
authors = ["Code_Cube <therealcodecube@gmail.com>"]
edition = "2018"

[lib]
name = "audiobench"
crate-type = ["staticlib"]

# Unfortunately, since all our code is being called from C++, we can't use panic!s without some 
# fiddling. We also can't catch the panics before they reach the C++ portion because our code
# involves RefCell and some other nasty things that don't work with catch_unwind
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
nodespeak = "0.1"
num = "0.2"
zip = "0.5"

[build-dependencies]
walkdir = "2.3"
zip = "0.5"
