[workspace]

members = [
    "components/audiobench",
    "components/audiobench_clib",
    "components/benchmark",
    "components/julia_helper",
    "components/nodespeak",
    "components/nodespeak_cli",
    "components/scui",
    "components/scui_macros",
    "components/shared_util",
    "components/yaml_widget_boilerplate",
]

# Unfortunately, since all our code is being called from C++, we can't use panic!s without some 
# fiddling. We also can't catch the panics before they reach the C++ portion because our code
# involves RefCell and some other nasty things that don't work with catch_unwind
[profile.dev]

[profile.release]
panic = "abort"
