[package]
name = "audiobench"
version = "0.1.0"
authors = ["Code_Cube <therealcodecube@gmail.com>"]
edition = "2018"

[lib]
name = "audiobench"

[dependencies]
array-macro = "1.0"
base64 = "0.12"
clipboard = "0.5"
const_env = "0.1"
directories = "2.0"
enumflags2 = "0.6"
nodespeak = "0.2"
num = "0.2"
rand = "0.7"
reqwest = { version = "0.10", features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
single_value_channel = "1.2"
webbrowser = "0.5"
yaml_widget_boilerplate = { path = "../yaml_widget_boilerplate" }
zip = "0.5"

[build-dependencies]
walkdir = "2.3"
zip = "0.5"
