[package]
name = "audiobench"
version = "0.2.2"
authors = ["joshua-maros <60271685+joshua-maros@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "audiobench"

[dependencies]
array-macro = "1.0"
base64 = "0.12"
clipboard = "0.5"
const_env = "0.1"
crossbeam-channel = "0.5.0"
crossbeam-utils = "0.8.1"
directories = "2.0"
enumflags2 = "0.6"
jlrs = { git="https://github.com/joshua-maros/jlrs" }
jlrs-derive = "0.2"
julia_helper = { path = "../julia_helper" }
observatory = "0.1.7"
owning_ref = "^0.4.1"
paste = "^1.0.4"
rand = "0.7"
reqwest = { version = "0.10", features = ["blocking", "rustls-tls"] }
scones = "0.1"
scui = { path = "../scui" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared_util = { path = "../shared_util" }
single_value_channel = "1.2"
tempfile = "^3.1.0"
webbrowser = "0.5"
yaml-rust = { git = "https://github.com/joshua-maros/yaml-rust", features=["strict"] }
yaml_widget_boilerplate = { path = "../yaml_widget_boilerplate" }
zip = "0.5"

[build-dependencies]
walkdir = "2.3"
zip = "0.5"
