[package]
name = "nodespeak"
version = "0.2.1"
authors = ["joshua-maros <60271685+joshua-maros@users.noreply.github.com>"]
edition = "2018"

description = "A JIT-ish compiler for number-crunching applications."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/nodespeak"
homepage = "https://gitlab.com/Code_Cube/nodespeak-compiler"
repository = "https://gitlab.com/Code_Cube/nodespeak-compiler"

[features]
no-vague=["no-resolved"]
no-resolved=["no-trivial"]
no-trivial=["no-llvmir"]
no-llvmir=[]
dump-llvmir=[]

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm7-0"] }
libc = "0.2"
ouroboros = "0.4"
pest = "2.1"
pest_derive = "2.1"
readonly = "0.1"
shared_util = { path = "../shared_util" }
snailquote = "0.3"
