[package]
name = "nodespeak_cli"
version = "0.1.0"
authors = ["joshua-maros <60271685+joshua-maros@users.noreply.github.com>"]
edition = "2018"

[features]
no-vague=["nodespeak/no-vague", "no-resolved"]
no-resolved=["nodespeak/no-resolved", "no-trivial"]
no-trivial=["nodespeak/no-trivial", "no-llvmir"]
no-llvmir=["nodespeak/no-llvmir"]
dump-llvmir=["nodespeak/dump-llvmir"]

[dependencies]
nodespeak = { path = "../nodespeak" }
terminal_size = "0.1"
text_io = "0.1"
