[package]
name = "yaml_widget_boilerplate"
version = "0.1.0"
authors = ["Code_Cube <therealcodecube@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
